# ComputerVisionLabs

./: .gitignore  .gitignore~  README.md
3D MODEL/: main.m
EGC/: checkInliers.m  eightPoint.m  getA.m  getForeground.m  getForegroundPoints.m  getPVM.m  getPvm.m  main.m  main.m~  normalize.m  normalizedEightPoint.m  ransacEightPoint.m  sampsonDistance.m  sfm.m  sfm.m~  showMatches.m
EGC/vlfeat/toolbox/: detector_MSER.m  image1_norm.ppm
ICP/: cleanData.m  closestPoints.m  cp.mat  getRms.m  getTransformation.m  icp.m  icp.m~  main.asv  main.m  main.m~  test.m  test2.m
Report/: egc.tex  icp.tex  main.aux  main.out  main.tex  sfm.tex
Report/figures/: 1-46amb.eps  2-22.eps  4-11.eps  4-11amb.eps  5-8.eps  8-5.eps  RMSmergedKD.eps  RMSunmergedKD.eps  comparison.eps  houseBackground.eps  housegood.eps  housegoodaffine.eps  matchesSimple.eps  matchesWithThresh.eps
SFM/: sfm.m
SFM/pcl_code/: CMakeLists.txt  main.cpp
src/3dpcl/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  readme  watertight  watertight.cbp
src/egc/: chaining.m  checkInliers.m  eightPoint.m  filterMatches.m  getA.m  getForeground.m  getPvm.m  main.m  normalizePoints.m  ransacEightPoint.m  readme
src/icp/: Untitled.m  closestPoints.m  errors10.mat  getTransformation.m  icp.m  main.m  nearest_neighbors.mexmaci64  parsave.m  readme  tr10.mat
src/printable 3D model/: README  printable3Dmodel.m
src/sfm/: constructD.m  gT.m  main.m  noAmbiguity.m  pointcloudHouse.fig  pvm.mat  pvmList.mat  readme  sfm.m  sfm.m~
src/sfm/pvms/: pvm1.mat  pvm2.mat  pvm3.mat  pvm4.mat  (+12 more)
